--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.0.0",
     "framer-motion": "^12.10.5",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
